syntax = "proto3";

package memberservice;

service MemberService {
  rpc GetMembers(MembersRequest) returns (MembersResponse) {}
}

message MembersRequest {
  
}

message MembersResponse {
  repeated Member members = 1;
}

message Member {
  string id = 1;
  string username = 2;
  string password = 3;
  string realName = 4;
  string email = 5;
  int32 bankAccount = 6;
  string createdAt = 7;
  string updatedAt = 8;
}
